tests/baselines/reference/defaultValueInFunctionTypes.errors.txt
==== tests/cases/compiler/defaultValueInFunctionTypes.ts (2 errors) ====
    var x: (a: number = 1) => number;
            ~~~~~~~~~~~~~
!!! error TS2174: Default arguments are only allowed in implementation.
    var y = <(a : string = "") => any>(undefined)
              ~~~~~~~~~~~~~~~
!!! error TS2174: Default arguments are only allowed in implementation.